# Aspose-PDF-FOSS-for-Python

./: .env.example  .gitignore  AGENTS.md  README.md  SECURITY.md  pyproject.toml  supported-features.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  publish-pypi.yml  publish-testpypi.yml  security-audit.yml
scripts/: build.sh  build_std_fonts.py  check.sh
src/aspose_pdf/: __init__.py  _version.py  attachments.py  cgm.py  color.py  document.py  drawing.py  exceptions.py  facades.py  font_registry.py  font_repository.py  forms.py  geometry.py  graphics.py  html.py  images.py  latex.py  license_management.py  load_options.py  ofd.py  (+22 more)
tests/: __init__.py  conftest.py  helpers_make_pdfs.py  test_acc01_font_embedding.py  test_aes_key_derivation.py  test_algorithm_2b_v5r6.py  test_annotation_appearance_generation.py  test_annotation_property_roundtrip.py  test_annotations.py  test_api_surface.py  test_attachment_metadata.py  test_attachments.py  test_audit_issue_10_trailer_nested_dict.py  test_audit_issue_11_tokenizer_null.py  test_audit_issue_12_lazy_object_parse_errors.py  test_audit_issue_13_object_stream.py  test_audit_issue_16_lazy_encryption.py  test_audit_issue_17_exceptions.py  test_audit_issue_18_encrypted_exception_types.py  test_audit_issue_19_content_stream_text.py  test_audit_issue_20_content_stream_token_memory.py  test_audit_issue_21_fonts_cmap_tounicode.py  test_audit_issue_22_jbig2.py  test_audit_issue_23_jpx_ccitt.py  test_audit_issue_24_incremental_update.py  test_audit_issue_25_encryption_v_and_password.py  test_audit_issue_26_decrypt_lazy.py  test_audit_issue_27_incremental_byte_range.py  test_audit_issue_28_signatures_compromise_detector.py  test_audit_issue_29_pdfa_heuristic.py  test_audit_issue_30_pdfua_heuristic.py  test_audit_issue_33_mmap_dispose.py  test_audit_issue_34_dispose_close_consistency.py  test_audit_issue_35_float_precision.py  test_audit_issue_36_stream_boundaries.py  test_audit_issue_37_stream_decoder.py  test_audit_issue_38_attachments.py  test_audit_issue_39_outlines.py  test_audit_issue_40_annotations_appearance.py  test_audit_issue_41_generated_document.py  (+106 more)
(+77 files in other folders)
